@@ -1,3 +1,6 @@
+2007-09-13 yo
+* Manager must be allowed for reading documents at any stage for indexing and management.
+
 2007-03-26
 Architecture design completed. Cleanup of code in progress.
 
